--- a/car-owner-ui/src/app/owners/owners.component.html
+++ b/car-owner-ui/src/app/owners/owners.component.html
@@ -1,26 +1,23 @@
 <div class="container" *ngIf="(owners && owners.length > 0); else noOwners">
-  <table class="table table-hover">
-    <thead class="thead-dark">
-      <tr>
-        <th scope="col">Id</th>
-        <th scope="col">First Name</th>
-        <th scope="col">Last Name</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let owner of owners" class="pointable" (click)="showDetails(owner.id)">
-        <td>
-          {{ owner.id }}
-        </td>
-        <td>
-          {{ owner.firstName }}
-        </td>
-        <td>
-          {{ owner.lastName }}
-        </td>
-      </tr>
-    </tbody>
+  
+  <table mat-table [dataSource]="owners">
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>Id</th>
+      <td mat-cell *matCellDef="let owner"> {{owner.id}} </td>
+    </ng-container>
+    <ng-container matColumnDef="firstName">
+      <th mat-header-cell *matHeaderCellDef>First Name</th>
+      <td mat-cell *matCellDef="let owner"> {{owner.firstName}} </td>
+    </ng-container>
+    <ng-container matColumnDef="lastName">
+      <th mat-header-cell *matHeaderCellDef>Last Name</th>
+      <td mat-cell *matCellDef="let owner"> {{owner.lastName}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+    <tr mat-row *matRowDef="let myRowData; columns: columnsToDisplay"></tr>
   </table>
+
 </div>
 <ng-template #noOwners>
   <h1>No owners visible</h1>
