Minor template changes

--- a/ui-template/src/app/app.component.html
+++ b/ui-template/src/app/app.component.html
@@ -2,4 +2,6 @@
 <button mat-button color="primary">Primary</button>
 <button mat-button color="accent">Accent</button>
 <button mat-button color="warn">Warning</button>
-<router-outlet></router-outlet>
+<main class="content">
+  <router-outlet></router-outlet>
+</main>
