--- a/ui-template/src/assets/styles/fonts.scss
+++ b/ui-template/src/assets/styles/fonts.scss
@@ -1,4 +1,4 @@
 @font-face {
-  font-family: Brand-yolq;
-  src: url("src/assets/styles/fonts/Branda-yolq.ttf") format('ttf');
+  font-family: "Brand-yolq";
+  src: url("./../fonts/Branda-yolq.ttf") format('ttf');
 }
