Fonts & Icon Fonts added locally

--- a/ui-template/src/assets/styles/colors.scss
+++ b/ui-template/src/assets/styles/colors.scss
@@ -1,3 +1,17 @@
 $primary: #2196f3;
 $accent: #536dfe;
 $warn: #f44336;
+$red: #F70010; // Bundeslogo
+$monza: #DC0018; // Abtrennung Header Globalnavigation mouseover & aktiv
+$dodger-blue: #2962FF; // Primary Interaction Color Button
+$white: #FFFFFF; // Hintergrund Applikation & Inputelemente Default Button Hintergrund
+$black: #000000; // Schriftfarbe Header (ausgenommen Links)
+$dark-grey: #454545; // Sprachauswahl
+$cerulean: #006699; // Links Sprachauswahl mouseover
+$web-range: #FFAB00; // Warning
+$granadier: #DD2C00; // Danger
+$malachite: #0DC853; // Success
+$header-test: #FFD200;
+$header-integration: #E3530A;
+$header-training: #9F1F36;
+$header-production: #FFFFFF;
