--- a/ui-template/src/app/app.component.html
+++ b/ui-template/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>{{title}}</h1>
-<button mat-button color="primary">Primary</button>
+<button mat-button color="primary" routerLink="admin">Primary</button>
 <button mat-button color="accent">Accent</button>
 <button mat-button color="warn">Warning</button>
 <main class="content">
