--- a/ui-template/src/app/home/home.component.html
+++ b/ui-template/src/app/home/home.component.html
@@ -1,4 +1,38 @@
-<p>home works!</p>
+<h1>Import Data</h1>
+<button mat-raised-button color="primary" (click)="importData()">
+  Import Data
+  <span class="material-icons">sim_card_download</span>
+</button>
+
+<div class="spinner">
+  <mat-spinner *ngIf="!isLoaded && isClicked"></mat-spinner>
+</div>
+
+<div class="mat-elevation-z8" *ngIf="isLoaded">
+  <table aria-label="table for data" mat-table [dataSource]="dataSource" style="width: 100%;">
+
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> Id</th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef> Description</th>
+      <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+    </ng-container>
+
+
+    <ng-container matColumnDef="date">
+      <th mat-header-cell *matHeaderCellDef> Date</th>
+      <td mat-cell *matCellDef="let element"> {{element.date | date: 'fullDate'}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+  </table>
+
+</div>
 
 <h1>Regular</h1>
 <span class="material-icons">home</span>
@@ -19,5 +53,3 @@
 <h1>Two Tone</h1>
 <span class="material-icons-two-tone">home</span>
 <mat-icon aria-hidden="false" aria-label="Example home icon" fontSet="material-icons-two-tone">home</mat-icon>
-
-
